About Me Section Completed

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
                 <button id="homeButton" class="nav-button" onclick="goToPage('Home')">Home</button>
                 <button id="aboutButton" class="nav-button" onclick="goToPage('About_Me')">About Me</button>
                 <button id="projectsButton" class="nav-button" onclick="goToPage('Projects')">Projects</button>
-                <button id="yearButton" class="nav-button" onclick="goToPage('Year-In-Review')">Year-In-Review</button>
+                <button id="experienceButton" class="nav-button" onclick="goToPage('Experiences')">Experiences</button>
                 <button id="moreButton" class="nav-button" onclick="goToPage('Pathways')">Pathways</button>
                 <button id="contactButton" class="nav-button" onclick="goToPage('Contact')">Contact</button>
             </div>
