Home Page Completed

--- a/templates/Home.html
+++ b/templates/Home.html
@@ -16,8 +16,11 @@ Portfolio - Kartavya Singh
         </div>
         <div><br><br></div>
         <div class="Comment">
-            <span>Programmers never die; they just lose their functions.</span>
+            <span>Born a Programmer: Debugging the World, One Line at a Time!</span>
         </div>
+        <button id="projectsButton" class="nav-sub-button" onclick="goToPage('Projects')">Projects</button>
+        <button id="experiencesButton" class="nav-sub-button" onclick="goToPage('Experiences')">Experiences</button>
+        <button id="contactButton" class="nav-sub-button" onclick="goToPage('Contact')">Contact Me</button>
     </div>
 </div>
 <script>
