--- a/static/styleHome.css
+++ b/static/styleHome.css
@@ -34,7 +34,7 @@
     display: inline-block;
     color: white;
     position: relative;
-    width: 100%;
+    width: 50%;
     white-space: nowrap;
     overflow: hidden;
     animation: 
@@ -55,4 +55,22 @@
     font-family: "Poppins", sans-serif;
     font-weight: 200; 
     font-size: 16px; 
+}
+
+.nav-sub-button {
+    background-color: #C19770;
+    color: #993500;
+    border: none;
+    margin-top: 50px;
+    margin-left: 45px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-family: 'Minima', sans-serif;
+    font-size: 12px;
+    transition: background-color 0.3s, color 0.3s;
+
+    &:hover {
+        background-color: #FFFCCC;
+    }
 }
