--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
                             </a>
                         </div>
                         <div class="SocialIcon Discord">
-                            <a href="https://discord.com/invite/cFQdY4tz" target="_blank" data-tooltip="Discord">
+                            <a href="https://discordapp.com/users/439541365580365835" target="_blank" data-tooltip="Discord">
                                 <img src="{{ url_for('static', filename='/Images/discord.png') }}" alt="Discord Icon">
                             </a>
                         </div>
