--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,7 @@
                 <button id="aboutButton" class="nav-button" onclick="goToPage('About_Me')">About Me</button>
                 <button id="projectsButton" class="nav-button" onclick="goToPage('Projects')">Projects</button>
                 <button id="experiencesButton" class="nav-button" onclick="goToPage('Experiences')">Experiences</button>
+                <button id="involvementsButton" class="nav-button" onclick="goToPage('Involvements')">Involvements</button>
                 <button id="moreButton" class="nav-button" onclick="goToPage('Pathways')">Pathways</button>
                 <button id="contactButton" class="nav-button" onclick="goToPage('Contact')">Contact</button>
             </div>
