--- a/templates/Gateway.html
+++ b/templates/Gateway.html
@@ -5,5 +5,11 @@ Gateway
 {% endblock %}
 
 {% block content %}
-<div><h1>Testing</h1></div>
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styleGateway.css') }}">
+<div class="Gateways">
+    <div class="Back">
+        <a href="Pathways"><img src="static/Images/Back.png" alt="Back" width="25" height="25"></a>
+    </div>
+</div>
+<br>
 {% endblock %}
