--- a/templates/Honors-Experience.html
+++ b/templates/Honors-Experience.html
@@ -5,5 +5,11 @@ Honors Experiences
 {% endblock %}
 
 {% block content %}
-<div><h1>Testing</h1></div>
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styleHonors.css') }}">
+<div class="Honors">
+    <div class="Back">
+        <a href="Pathways"><img src="static/Images/Back.png" alt="Back" width="25" height="25"></a>
+    </div>
+</div>
+<br>
 {% endblock %}
