--- a/templates/Year-In-Review.html
+++ b/templates/Year-In-Review.html
@@ -1,9 +1,15 @@
 {% extends "index.html" %}
 
 {% block title %}
-Year In Reviews
+Year-In-Review
 {% endblock %}
 
 {% block content %}
-<div><h1>Testing</h1></div>
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styleYearInReview.css') }}">
+<div class="Year-In-Reviews">
+    <div class="Back">
+        <a href="Pathways"><img src="static/Images/Back.png" alt="Back" width="25" height="25"></a>
+    </div>
+</div>
+<br>
 {% endblock %}
