--- a/templates/Year-In-Review.html
+++ b/templates/Year-In-Review.html
@@ -10,6 +10,33 @@ Year-In-Review
     <div class="Back">
         <a href="Pathways"><img src="static/Images/Back.png" alt="Back" width="25" height="25"></a>
     </div>
+    <div class="Year-In-Review">
+        <h2>Year-In-Review</h2>
+    </div>
+    <div class="Sub-Box" onclick="goToPage('Year-In-Review-2022-2023')">
+        <h2>Year-In-Review 2022 - 2023</h2>
+        <!-- Content for Year-In-Review division goes here -->
+    </div>
+    <div class="Sub-Box">
+        <h2>Year-In-Review 2023 - 2024</h2>
+        <h6 class="HoverText">In Progress...</h6>
+        <!-- Content for Honors Experience division goes here -->
+    </div>
+    <div class="Sub-Box">
+        <h2>Year-In-Review 2024 - 2025</h2>
+        <h6 class="HoverText">In Progress...</h6>
+        <!-- Content for Gateway division goes here -->
+    </div>
+    <div class="Sub-Box">
+        <h2>Year-In-Review 2025 - 2026</h2>
+        <h6 class="HoverText">In Progress...</h6>
+        <!-- Content for Gateway division goes here -->
+    </div>
 </div>
+<script>
+    function goToPage(url) {
+        window.location.href = url;
+    }
+</script>
 <br>
 {% endblock %}
