--- a/static/styleHonors.css
+++ b/static/styleHonors.css
@@ -4,12 +4,18 @@
     display: flex;
     flex-direction: column;
     align-items: left;
-    justify-content: flex-start; /* Change justify-content to flex-start */
+    justify-content: flex-start;
     margin-top: 0px;
     background-color: rgba(193, 151, 112, 0.71);
     width: 50%;
+    padding: 50px;
     margin: 0px auto;
-    text-align: left; /* Aligns the content inside the box to the left */
-    overflow: hidden; /* or overflow: auto; */
+    text-align: left;
+    overflow: hidden;
     font-family: 'Space Grotesk', sans-serif;
+}
+
+.Back {
+    margin-top: -50px;
+    margin-left: -50px;
 }
