--- a/static/styleYearInReview.css
+++ b/static/styleYearInReview.css
@@ -4,12 +4,54 @@
     display: flex;
     flex-direction: column;
     align-items: left;
-    justify-content: flex-start; /* Change justify-content to flex-start */
+    justify-content: flex-start;
     margin-top: 0px;
     background-color: rgba(193, 151, 112, 0.71);
     width: 50%;
+    padding: 50px;
     margin: 0px auto;
-    text-align: left; /* Aligns the content inside the box to the left */
-    overflow: hidden; /* or overflow: auto; */
+    text-align: left;
+    overflow: hidden;
     font-family: 'Space Grotesk', sans-serif;
 }
+
+.Back {
+    margin-top: -50px;
+    margin-left: -50px;
+}
+
+.Year-In-Review {
+    text-align: left;
+    margin-bottom: 10px;
+    margin-top: -30px;
+}
+
+.Sub-Box {
+    color: #993500;
+    width: 90%;
+    height: 15vh;
+    margin: 10px 0; /* Add margin for spacing */
+    background-color: #FFFCCC;
+    margin-left: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px; /* Round the corners */
+    cursor: pointer;
+    &:hover {
+        background-color: #993500;
+        color: #FFFCCC ;
+    }
+}
+
+.HoverText {
+    display: none;
+    margin-top: -30px;
+    font-size: 14px;
+    color: white;
+}
+
+.Sub-Box:hover .HoverText {
+    display: block;
+}
+
