--- a/templates/Gateway.html
+++ b/templates/Gateway.html
@@ -10,6 +10,26 @@ Gateway
     <div class="Back">
         <a href="Pathways"><img src="static/Images/Back.png" alt="Back" width="25" height="25"></a>
     </div>
+    <div class="Gateway">
+        <h2>Gateway</h2>
+    </div>
+    <div class="GatewayText">
+        <p>
+            <b>An experience before my college that sticks out the most to me</b>
+            <br><br>
+            My life before college has been a mix of all sorts of situations, but the one that sticks out the most to me was when I initially started showing interest in computer science, I got to know that coding never works in a single try, and we don't fail and have to start over just once, but multiple times. Back in 2021, when the covid pandemic hit, I saw it as the perfect opportunity for me to spend more time on not just school-related work, but also work on projects that require more effort and commitment. 
+            <br><br>
+            The first ever Technical project that I started was the Discord Bot Application Project, which I started as a solo project. Initially, I had to start up by learning a completely new coding language with different compilers and functionalities, which were totally different from the other languages I was confident in.  The number of errors I made had me feel like quitting at many points of the project, but I never gave up and that was when I realized the harder some goals are for me, the more I like preaching those goals, no matter what it takes for me to attain it. As each and every day passed I got better and better until eventually, I mastered the coding language JavaScript.
+            <br><br>
+            This was when I realized the biggest mistake I had been making all this while. 
+            some computer related projects do not just work on some random line of codings that we have been learning in our high schools if not all projects require us to use libraries that are installed within the language, and then began my journey into learning about the various libraries that the language contained in itself.  I would definitely like to point out that the courses that were taught in the high schools were nothing on the level of what these libraries required, only a selective few functions learned in the high schools were useful, the rest of it would be completely different. 
+            <br><br>
+            As a result, I was finally able to enhance my knowledge in everything that was required for the project and started my journey of becoming a discord bot app developer.
+            I designed a thoroughly functioning Discord utility bot on JavaScript utilizing Discord.js, Discord.py, and Math.js library of JavaScript, along with user data storage on MongoDB. Its main features were serving as a utility music bot used for creating, deleting, and modifying channels, roles, music rooms, and game rooms.
+            Furthermore, I developed a 2-player tic-tac-toe game, a Single-player word-scramble game, a single-player fighting game, and the biggest hit of these all a multiplayer card
+            fighting game for action anime characters (AniCard Bot)   
+        </p>
+    </div>
 </div>
 <br>
 {% endblock %}
