--- a/static/styleContact.css
+++ b/static/styleContact.css
@@ -87,8 +87,14 @@
 }
 
 /* Style the form elements on smaller screens */
-@media (max-width: 768px) {
+@media (max-width: 900px) {
     .ContactBox {
-        width: 90%;
+        width: 80%;
+    }
+}
+
+@media (max-width: 700px) {
+    .ContactBox {
+        width: 100%;
     }
 }
