--- a/static/styleGateway.css
+++ b/static/styleGateway.css
@@ -19,3 +19,9 @@
     margin-top: -50px;
     margin-left: -50px;
 }
+
+.Gateway {
+    text-align: left;
+    margin-bottom: 10px;
+    margin-top: -30px;
+}
