Honors Experiences Completed

--- a/templates/Honors-Experience.html
+++ b/templates/Honors-Experience.html
@@ -10,6 +10,42 @@ Honors Experiences
     <div class="Back">
         <a href="Pathways"><img src="static/Images/Back.png" alt="Back" width="25" height="25"></a>
     </div>
+    <div class="Honors-Experience">
+        <h2>Honors Experiences</h2>
+    </div>
+
+    <div class="Sub-Box">
+        <div class="Sub-Box-Image">
+            <img src="static/Images/UC_LC.png" alt="UC_LC" width="125" height="125">
+        </div>
+        <div class="Sub-Box-Text" onclick="goToPage('COOP-1000')">
+            <div class="Sub-Box-Date">
+                <h4>January 2023</h4>
+            </div>
+            <div class="Sub-Box-Title">
+                <h2>COOP 1000 Course</h2>
+            </div>
+            <div class="Sub-Box-Description">
+                <p>Engaged in COOP 1000 course for personal growth and shared my expertise as an SRS Leader to empower fellow students.</p>
+            </div>
+        </div>
+    </div>
+    <div class="Sub-Box">
+        <div class="Sub-Box-Image">
+            <img src="static/Images/Discord_Exp.png" alt="Discord_Exp" width="125" height="125">
+        </div>
+        <div class="Sub-Box-Text">
+            <div class="Sub-Box-Date" onclick="goToPage('Discord_Exp')">
+                <h4>August 2021</h4>
+            </div>
+            <div class="Sub-Box-Title">
+                <h2>Discord Bot Developer</h2>
+            </div>
+            <div class="Sub-Box-Description">
+                <p>Created a robust Discord utility bot with music, games, and data storage capabilities, and an unique Card Game Appplication.</p>
+            </div>
+        </div>
+    </div>
 </div>
 <br>
 {% endblock %}
