--- a/static/styleHonors.css
+++ b/static/styleHonors.css
@@ -19,3 +19,61 @@
     margin-top: -50px;
     margin-left: -50px;
 }
+
+.Honors-Experience {
+    text-align: left;
+    margin-bottom: 10px;
+    margin-top: -30px;
+}
+
+.Sub-Box {
+    color: #993500;
+    width: 100%;
+    height: 25vh;
+    background-color: #FFFCCC;
+    display: flex;
+    margin-bottom: 30px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    cursor: pointer;
+    &:hover {
+        background-color: #993500;
+        color: #FFFCCC;
+    }
+}
+
+.Sub-Box-Image {
+    flex: 0 0 30%; /* 30% width */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+}
+
+.Sub-Box-Image img {
+    max-width: 100%; /* Ensure the image fits within the container */
+    height: auto; /* Maintain aspect ratio */
+}
+
+.Sub-Box-Text {
+    flex: 0 0 70%; /* 70% width */
+    margin: 0px;
+}
+
+.Sub-Box-Date h4 {
+    font-size: small;
+    margin: 0px;
+}
+
+.Sub-Box-Title h2 {
+    font-size: medium;
+    margin: 0px;
+}
+
+.Sub-Box-Description p {
+    margin: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
+    font-size: small;
+}
