All Pathways Completed

--- a/static/styleDiscord.css
+++ b/static/styleDiscord.css
@@ -29,3 +29,8 @@
     margin-bottom: 10px; /* Adds spacing between sections */
     margin-top: -50px;
 }
+
+.Back {
+    margin-top: -50px;
+    margin-left: -50px;
+}
