--- a/templates/Discord_Exp.html
+++ b/templates/Discord_Exp.html
@@ -8,9 +8,12 @@ COOP-1000 Experience
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styleDiscord.css') }}">
 <div class="DiscordContainer">
     <div class="DiscordImage">
-        <img id="Kartavya-About-Me-Picture" src="{{ url_for('static', filename='/Images/Discord_Exp.png') }}" width="200" height="200" alt="COOP 1000 Picture">
+        <img id="Kartavya-About-Me-Picture" src="{{ url_for('static', filename='/Images/Discord_Exp_2.jpeg') }}" width="400" height="200" alt="COOP 1000 Picture">
     </div>
     <div class="DiscordText">
+        <div class="Back">
+            <a href="Honors-Experience"><img src="static/Images/Back.png" alt="Back" width="25" height="25"></a>
+        </div>
         <div class="DiscordTitle">
             <h2>Discord Bot Developer</h2>
         </div>
