--- a/templates/Honors-Experience.html
+++ b/templates/Honors-Experience.html
@@ -14,11 +14,11 @@ Honors Experiences
         <h2>Honors Experiences</h2>
     </div>
 
-    <div class="Sub-Box">
+    <div class="Sub-Box" onclick="goToPage('COOP-1000')">
         <div class="Sub-Box-Image">
             <img src="static/Images/UC_LC.png" alt="UC_LC" width="125" height="125">
         </div>
-        <div class="Sub-Box-Text" onclick="goToPage('COOP-1000')">
+        <div class="Sub-Box-Text">
             <div class="Sub-Box-Date">
                 <h4>January 2023</h4>
             </div>
@@ -30,12 +30,12 @@ Honors Experiences
             </div>
         </div>
     </div>
-    <div class="Sub-Box">
+    <div class="Sub-Box" onclick="goToPage('Discord_Exp')">
         <div class="Sub-Box-Image">
             <img src="static/Images/Discord_Exp.png" alt="Discord_Exp" width="125" height="125">
         </div>
         <div class="Sub-Box-Text">
-            <div class="Sub-Box-Date" onclick="goToPage('Discord_Exp')">
+            <div class="Sub-Box-Date">
                 <h4>August 2021</h4>
             </div>
             <div class="Sub-Box-Title">
