--- a/static/styleCOOP-1000.css
+++ b/static/styleCOOP-1000.css
@@ -28,3 +28,8 @@
     margin-bottom: 10px; /* Adds spacing between sections */
     margin-top: -50px;
 }
+
+.Back {
+    margin-top: -50px;
+    margin-left: -50px;
+}
