--- a/templates/COOP-1000.html
+++ b/templates/COOP-1000.html
@@ -11,6 +11,9 @@ COOP-1000 Experience
         <img id="COOP-1000-Picture" src="{{ url_for('static', filename='/Images/UC_LC.png') }}" width="200" height="200" alt="COOP 1000 Picture">
     </div>
     <div class="COOP-1000Text">
+        <div class="Back">
+            <a href="Honors-Experience"><img src="static/Images/Back.png" alt="Back" width="25" height="25"></a>
+        </div>
         <div class="COOP-1000Title">
             <h2>COOP 1000 Course</h2>
         </div>
