--- a/templates/Year-In-Review-2022-2023.html
+++ b/templates/Year-In-Review-2022-2023.html
@@ -6,6 +6,7 @@ Year-In-Review
 
 {% block content %}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styleYearInReview2022-2023.css') }}">
+<br>
 <div class="Year-In-Reviews">
     <div class="Back">
         <a href="Year-In-Review"><img src="static/Images/Back.png" alt="Back" width="25" height="25"></a>
@@ -48,6 +49,18 @@ Year-In-Review
     function goToPage(url) {
         window.location.href = url;
     }
+    function setActiveButton(pageName) {
+                    const buttons = document.querySelectorAll(".nav-button");
+                    pageName = pageName.replace(/_/g, " ");
+                    buttons.forEach(button => {
+                        if (button.textContent.trim() === pageName) {
+                            button.classList.add("active");
+                        } else {
+                            button.classList.remove("active");
+                        }
+                    });
+                }
+                setActiveButton("Honors");
 </script>
 <br>
 {% endblock %}
