--- a/templates/Honors-Experience.html
+++ b/templates/Honors-Experience.html
@@ -6,9 +6,10 @@ Honors Experiences
 
 {% block content %}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styleHonors.css') }}">
+<br>
 <div class="Honors">
     <div class="Back">
-        <a href="Pathways"><img src="static/Images/Back.png" alt="Back" width="25" height="25"></a>
+        <a href="Honors"><img src="static/Images/Back.png" alt="Back" width="25" height="25"></a>
     </div>
     <div class="Honors-Experience">
         <h2>Honors Experiences</h2>
@@ -47,5 +48,19 @@ Honors Experiences
         </div>
     </div>
 </div>
+<script>
+    function setActiveButton(pageName) {
+                    const buttons = document.querySelectorAll(".nav-button");
+                    pageName = pageName.replace(/_/g, " ");
+                    buttons.forEach(button => {
+                        if (button.textContent.trim() === pageName) {
+                            button.classList.add("active");
+                        } else {
+                            button.classList.remove("active");
+                        }
+                    });
+                }
+                setActiveButton("Honors");
+</script>
 <br>
 {% endblock %}
