--- a/templates/Projects.html
+++ b/templates/Projects.html
@@ -11,13 +11,14 @@ Projects
         window.location.href = pageName;
     }
 </script>
+<br>
 <div class="Projects">
     <div class="Project">
         <span><h2>Projects</h2></span>
     </div>
     <div class="Sub-Box" onclick="goToPage('COOP-1000')">
         <div class="Sub-Box-Image">
-            <img src="static/Images/UC_LC.png" alt="UC_LC" width="125" height="125">
+            <img src="static/Images/LC.jpeg" alt="UC_LC" width="125" height="125">
         </div>
         <div class="Sub-Box-Text">
             <div class="Sub-Box-Date">
@@ -29,7 +30,9 @@ Projects
             <div class="Sub-Box-Description">
                 <p>Engaged in COOP 1000 course for personal growth and shared my expertise as an SRS Leader to empower fellow students.</p>
             </div>
+            <br>
         </div>
     </div>
 </div>
+<br>
 {% endblock %}
