--- a/templates/Year-In-Review.html
+++ b/templates/Year-In-Review.html
@@ -6,9 +6,10 @@ Year-In-Review
 
 {% block content %}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styleYearInReview.css') }}">
+<br>
 <div class="Year-In-Reviews">
     <div class="Back">
-        <a href="Pathways"><img src="static/Images/Back.png" alt="Back" width="25" height="25"></a>
+        <a href="Honors"><img src="static/Images/Back.png" alt="Back" width="25" height="25"></a>
     </div>
     <div class="Year-In-Review">
         <h2>Year-In-Review</h2>
@@ -37,6 +38,18 @@ Year-In-Review
     function goToPage(url) {
         window.location.href = url;
     }
+    function setActiveButton(pageName) {
+                    const buttons = document.querySelectorAll(".nav-button");
+                    pageName = pageName.replace(/_/g, " ");
+                    buttons.forEach(button => {
+                        if (button.textContent.trim() === pageName) {
+                            button.classList.add("active");
+                        } else {
+                            button.classList.remove("active");
+                        }
+                    });
+                }
+                setActiveButton("Honors");
 </script>
 <br>
 {% endblock %}
