Index.html fixed for mobile devices

--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
                 <div class="FooterColumn">
                     <div>Call</div>
                     <div><br></div>
-                    <div>+1 (513)-837-7683</div>
+                    <div class="Num">+1 (513)-837-7683</div>
                 </div>
                 <div class="FooterColumn">
                     <div>Email</div>
