--- a/static/style.css
+++ b/static/style.css
@@ -116,7 +116,7 @@ body {
 /* ... (other existing styles) */
 
 /* Media query for screens with max-width 768px (typical tablet and mobile screens) */
-@media (max-width: 415px) {
+@media (max-width: 380px) {
     body {
         background-size: auto; /* Adjust background size for smaller screens */
     }
@@ -141,7 +141,7 @@ body {
 
     .nav-button {
         font-size: 8px; /* Adjust font size for buttons on smaller screens */
-        padding: 5px 10px; /* Adjust button padding */
+        padding: 8px 5px; /* Adjust button padding */
     }
 
     /* Adjust social icon styles */
@@ -150,8 +150,57 @@ body {
     }
 
     .SocialIcon img {
-        width: 15px; /* Reduce icon size */
-        height: 15px;
+        width: 20px; /* Reduce icon size */
+        height: 20px;
+    }
+
+    .Num {
+        font-size: x-small;
+    }
+
+    /* Add any other necessary adjustments */
+}
+
+@media (max-width: 420px) {
+    body {
+        background-size: auto; /* Adjust background size for smaller screens */
+    }
+
+    .common-content {
+        min-height: 20vh; /* Adjust content height for better mobile experience */
+    }
+
+    .Box {
+        width: 100%; /* Adjust width for full width on smaller screens */
+        height: auto; /* Allow height to adjust based on content */
+    }
+
+    .FooterBox {
+        height: auto; /* Allow footer height to adjust based on content */
+    }
+
+    .FooterColumn {
+        padding: 5px; /* Reduce padding for smaller screens */
+        font-size: 12px;
+    }
+
+    .nav-button {
+        font-size: 8px; /* Adjust font size for buttons on smaller screens */
+        padding: 8px 5px; /* Adjust button padding */
+    }
+
+    /* Adjust social icon styles */
+    .SocialIcon {
+        margin: 5px 0;
+    }
+
+    .SocialIcon img {
+        width: 25px; /* Reduce icon size */
+        height: 25px;
+    }
+
+    .Num {
+        font-size: x-small;
     }
 
     /* Add any other necessary adjustments */
