--- a/static/styleCOOP-1000.css
+++ b/static/styleCOOP-1000.css
@@ -33,3 +33,12 @@
     margin-top: -50px;
     margin-left: -50px;
 }
+
+@media (max-width: 769px) {
+}
+
+@media (max-width: 420px) {
+}
+
+@media (max-width: 380px) {
+}
