--- a/static/styleContact.css
+++ b/static/styleContact.css
@@ -98,3 +98,12 @@
         width: 100%;
     }
 }
+
+@media (max-width: 769px) {
+}
+
+@media (max-width: 420px) {
+}
+
+@media (max-width: 380px) {
+}
