--- a/static/styleDiscord.css
+++ b/static/styleDiscord.css
@@ -34,3 +34,12 @@
     margin-top: -50px;
     margin-left: -50px;
 }
+
+@media (max-width: 769px) {
+}
+
+@media (max-width: 420px) {
+}
+
+@media (max-width: 380px) {
+}
