--- a/static/styleGateway.css
+++ b/static/styleGateway.css
@@ -25,3 +25,12 @@
     margin-bottom: 10px;
     margin-top: -30px;
 }
+
+@media (max-width: 769px) {
+}
+
+@media (max-width: 420px) {
+}
+
+@media (max-width: 380px) {
+}
