--- a/static/styleHonor.css
+++ b/static/styleHonor.css
@@ -38,3 +38,12 @@
         color: #FFFCCC ;
     }
 }
+
+@media (max-width: 769px) {
+}
+
+@media (max-width: 420px) {
+}
+
+@media (max-width: 380px) {
+}
