--- a/static/styleYearInReview2022-2023.css
+++ b/static/styleYearInReview2022-2023.css
@@ -39,3 +39,12 @@
     margin-bottom: 10px;
     margin-top: -30px;
 }
+
+@media (max-width: 769px) {
+}
+
+@media (max-width: 420px) {
+}
+
+@media (max-width: 380px) {
+}
