Fixed Honors for Mobile

--- a/templates/Involvements.html
+++ b/templates/Involvements.html
@@ -18,7 +18,7 @@ Involvements
     </div>
     <div class="Sub-Box" onclick="goToPage('COOP-1000')">
         <div class="Sub-Box-Image">
-            <img src="static/Images/UC_LC.png" alt="UC_LC" width="125" height="125">
+            <img src="static/Images/LC.jpeg" alt="UC_LC" width="125" height="125">
         </div>
         <div class="Sub-Box-Text">
             <div class="Sub-Box-Date">
@@ -33,4 +33,5 @@ Involvements
         </div>
     </div>
 </div>
+<br>
 {% endblock %}
