--- a/static/styleHonor.css
+++ b/static/styleHonor.css
@@ -39,11 +39,20 @@
     }
 }
 
-@media (max-width: 769px) {
-}
-
 @media (max-width: 420px) {
+    .Sub-Box {
+        margin-left: 10px;
+        height:auto;
+        width: 90%;
+        font-size: x-small;
+    }
 }
 
 @media (max-width: 380px) {
+    .Sub-Box {
+        margin-left: 10px;
+        height:auto;
+        width: 90%;
+        font-size: x-small;
+    }
 }
