--- a/static/styleYearInReview2022-2023.css
+++ b/static/styleYearInReview2022-2023.css
@@ -41,10 +41,83 @@
 }
 
 @media (max-width: 769px) {
+    .ReviewText {
+        font-size: medium;
+    }
+
+    .Year-In-Review {
+        font-size: small;
+    }
+
+    .LibraryImage {
+        margin-left: 0px;
+        margin-top: 0px;
+    }
+    
+    .JapaneseImage {
+        margin-left: 0px;
+        margin-top: 0px;
+        margin-bottom: -30px;
+    }
+    
+    .BearChatImage {
+        margin-left: 0px;
+        margin-top: 20px;
+        margin-bottom: -40px;
+    }
 }
 
 @media (max-width: 420px) {
+    .ReviewText {
+        font-size: x-small;
+    }
+
+    .Year-In-Review {
+        font-size: xx-small;
+    }
+
+    .LibraryImage {
+        margin-left: 0px;
+        margin-top: 0px;
+    }
+    
+    .JapaneseImage {
+        margin-left: 0px;
+        margin-top: 0px;
+        margin-bottom: -30px;
+    }
+    
+    .BearChatImage {
+        margin-left: 0px;
+        margin-top: 20px;
+        margin-bottom: -40px;
+    }
 }
 
 @media (max-width: 380px) {
+
+    .ReviewText {
+        font-size: x-small;
+    }
+
+    .Year-In-Review {
+        font-size: xx-small;
+    }
+
+    .LibraryImage {
+        margin-left: 0px;
+        margin-top: 0px;
+    }
+    
+    .JapaneseImage {
+        margin-left: 0px;
+        margin-top: 0px;
+        margin-bottom: -30px;
+    }
+    
+    .BearChatImage {
+        margin-left: 0px;
+        margin-top: 20px;
+        margin-bottom: -40px;
+    }
 }
